updated biryani section with imgs

--- a/menu.html
+++ b/menu.html
@@ -1037,9 +1037,9 @@
 
                 <!-- Biryani -->
                 <div class="menuSections"> <!--exp ng-star-inserted -->
-                    <div id="appetizers"> <!--appetizers-->
+                    <div id="biryani"> <!--appetizers-->
                         <div class="sectionText"> <!--cateogory-tab -->
-                            <h3>Appetizers</h3>
+                            <h3>Biryani</h3>
                             <div class="png"> <!--png-->
                                 <img src="assets/imgs/chevron-double-down.svg" alt="">
                             </div>
@@ -1050,65 +1050,65 @@
                         <div class="inner-container"> <!--Inner-container-->
                             <div class="main-container">
                                 <div class="logo"> <!--logo-->
-                                    <img src="assets/imgs/chicken65.jpg" alt="">
+                                    <img src="assets/imgs/Chicken-Biryani-Recipe.jpg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Chicken 65</h3>
+                                    <h3>Chicken Biryani</h3>
+                                    <p><span>$9.99</span></p>
+                                </div>
+                            </div>
+                            <div class="main-container">
+                                <div class="logo">
+                                    <img src="/assets/imgs/muttonBiryani.jpg" alt="">
+                                </div>
+                                <div class="content">
+                                    <h3>Mutton Biryani</h3>
+                                    <p><span>$14.99</span></p>
+                                </div>
+                            </div>
+                            <div class="main-container">
+                                <div class="logo">
+                                    <img src="/assets/imgs/fishBiryani.jpg" alt="">
+                                </div>
+                                <div class="content">
+                                    <h3>Fish Biryani</h3>
                                     <p><span>$11.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="/assets/imgs/Kerala chicken fry.jpg" alt="">
+                                    <img src="/assets/imgs/Egg-biryani-recipe@palates-desire.jpg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Kerala Chicken Fry</h3>
-                                    <p><span>$11.99</span></p>
+                                    <h3>Egg Biryani</h3>
+                                    <p><span>$7.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="/assets/imgs/chilliChicken.jpeg" alt="">
+                                    <img src="/assets/imgs/Veg-Biryani-2-3.jpg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Chili Chicken Dry</h3>
-                                    <p><span>$11.99</span></p>
+                                    <h3>Veg Biryani</h3>
+                                    <p><span>$6.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="/assets/imgs/Gobi_Manchurian.jpg" alt="">
+                                    <img src="/assets/imgs/kappaBiryani.jpg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Gobi Manchurian</h3>
+                                    <h3>Kappa Biryani</h3>
                                     <p><span>$10.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="/assets/imgs/chickenManchurian.jpg" alt="">
+                                    <img src="assets/imgs/Thalasseri Beef Biryani (1) (1).jpg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Chicken Manchurian</h3>
-                                    <p><span>$10.99</span></p>
-                                </div>
-                            </div>
-                            <div class="main-container">
-                                <div class="logo">
-                                    <img src="/assets/imgs/chicken-pakora-8.jpg" alt="">
-                                </div>
-                                <div class="content">
-                                    <h3>Chicken Pakora</h3>
-                                    <p><span>$10.99</span></p>
-                                </div>
-                            </div>
-                            <div class="main-container">
-                                <div class="logo">
-                                    <img src="assets/imgs/beefDryFry.jpg" alt="">
-                                </div>
-                                <div class="content">
-                                    <h3>Beef Dry Fry (BDF)</h3>
-                                    <p><span>$16.99</span></p>
+                                    <h3>Thalasseri Special Beef Biryani</h3>
+                                    <p><span>$15.99</span></p>
                                 </div>
                             </div>
                         </div>
