updated imgs for Dosa section

--- a/menu.html
+++ b/menu.html
@@ -1117,9 +1117,9 @@
 
                 <!-- Dosa  -->
                 <div class="menuSections"> <!--exp ng-star-inserted -->
-                    <div id="appetizers"> <!--appetizers-->
+                    <div id="dosa"> <!--appetizers-->
                         <div class="sectionText"> <!--cateogory-tab -->
-                            <h3>Appetizers</h3>
+                            <h3>Dosa Specials</h3>
                             <div class="png"> <!--png-->
                                 <img src="assets/imgs/chevron-double-down.svg" alt="">
                             </div>
@@ -1130,65 +1130,56 @@
                         <div class="inner-container"> <!--Inner-container-->
                             <div class="main-container">
                                 <div class="logo"> <!--logo-->
-                                    <img src="assets/imgs/chicken65.jpg" alt="">
+                                    <img src="assets/imgs/Masala-dosa-1-735x538.webp" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Chicken 65</h3>
-                                    <p><span>$11.99</span></p>
+                                    <h3>Masala Dosa</h3>
+                                    <p><span>$7.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="/assets/imgs/Kerala chicken fry.jpg" alt="">
+                                    <img src="/assets/imgs/Mysore-masala-dosa.jpg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Kerala Chicken Fry</h3>
-                                    <p><span>$11.99</span></p>
+                                    <h3>Mysoor Masala Dosa</h3>
+                                    <p><span>$7.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="/assets/imgs/chilliChicken.jpeg" alt="">
+                                    <img src="/assets/imgs/ghee-roast-dosa-recipe-b.jpg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Chili Chicken Dry</h3>
-                                    <p><span>$11.99</span></p>
+                                    <h3>Ghee Roast</h3>
+                                    <p><span>$6.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="/assets/imgs/Gobi_Manchurian.jpg" alt="">
+                                    <img src="/assets/imgs/Egg-Dosa-2-3.jpg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Gobi Manchurian</h3>
-                                    <p><span>$10.99</span></p>
+                                    <h3>Egg Dosa</h3>
+                                    <p><span>$6.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="/assets/imgs/chickenManchurian.jpg" alt="">
+                                    <img src="/assets/imgs/thattuDosa.avif" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Chicken Manchurian</h3>
-                                    <p><span>$10.99</span></p>
+                                    <h3>Thattu Dosa</h3>
+                                    <p><span>$1.50/Piece</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="/assets/imgs/chicken-pakora-8.jpg" alt="">
+                                    <img src="/assets/imgs/uthappam.jpg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Chicken Pakora</h3>
-                                    <p><span>$10.99</span></p>
-                                </div>
-                            </div>
-                            <div class="main-container">
-                                <div class="logo">
-                                    <img src="assets/imgs/beefDryFry.jpg" alt="">
-                                </div>
-                                <div class="content">
-                                    <h3>Beef Dry Fry (BDF)</h3>
-                                    <p><span>$16.99</span></p>
+                                    <h3>Uthappam</h3>
+                                    <p><span>$3.99</span></p>
                                 </div>
                             </div>
                         </div>
