added data-target for each menu ID, then added js script for scrolling

--- a/menu.html
+++ b/menu.html
@@ -51,67 +51,67 @@
 
                 <div class="menuOptions">
                     <div class="menuBtns">
-                        <button class="all highlight">All</button>
+                        <button class="all highlight" data-target="#appetizers">All</button>
                         <div class="divider">|</div>
                     </div>
                     <div class="menuBtns">
-                        <button class="all">Appetizers</button>
+                        <button class="all" data-target="#appetizers">Appetizers</button>
                         <div class="divider">|</div>
                     </div>
                     <div class="menuBtns">
-                        <button class="all">Mutton Entrees</button>
+                        <button class="all" data-target="#muttonEntrees">Mutton Entrees</button>
                         <div class="divider">|</div>
                     </div>
                     <div class="menuBtns">
-                        <button class="all">Chicken Entrees</button>
+                        <button class="all" data-target="#chickenEntrees">Chicken Entrees</button>
                         <div class="divider">|</div>
                     </div>
                     <div class="menuBtns">
-                        <button class="all">Beef Entrees</button>
+                        <button class="all" data-target="#beefEntrees">Beef Entrees</button>
                         <div class="divider">|</div>
                     </div>
                     <div class="menuBtns">
-                        <button class="all">Fish Entrees</button>
+                        <button class="all" data-target="#fishEntrees">Fish Entrees</button>
                         <div class="divider">|</div>
                     </div>
                     <div class="menuBtns">
-                        <button class="all">Vegetables</button>
+                        <button class="all" data-target="#vegetables">Vegetables</button>
                         <div class="divider">|</div>
                     </div>
                     <div class="menuBtns">
-                        <button class="all">Indo Chinese</button>
+                        <button class="all" data-target="#indoChinese">Indo Chinese</button>
                         <div class="divider">|</div>
                     </div>
                     <div class="menuBtns">
-                        <button class="all">Combos</button>
+                        <button class="all" data-target="#combo">Combos</button>
                         <div class="divider">|</div>
                     </div>
                     <div class="menuBtns">
-                        <button class="all">Special Combos</button>
+                        <button class="all" data-target="#specialCombos">Special Combos</button>
                         <div class="divider">|</div>
                     </div>
                     <div class="menuBtns">
-                        <button class="all">Beverages</button>
+                        <button class="all" data-target="#beverages">Beverages</button>
                         <div class="divider">|</div>
                     </div>
                     <div class="menuBtns">
-                        <button class="all">Indian Breads</button>
+                        <button class="all" data-target="#breads">Indian Breads</button>
                         <div class="divider">|</div>
                     </div>
                     <div class="menuBtns">
-                        <button class="all">Rice & Noodles</button>
+                        <button class="all" data-target="#riceAndNoodles">Rice & Noodles</button>
                         <div class="divider">|</div>
                     </div>
                     <div class="menuBtns">
-                        <button class="all">Biriyani Specials</button>
+                        <button class="all" data-target="#biryani">Biriyani Specials</button>
                         <div class="divider">|</div>
                     </div>
                     <div class="menuBtns">
-                        <button class="all">Dosa Specials</button>
+                        <button class="all" data-target="dosa">Dosa Specials</button>
                         <div class="divider">|</div>
                     </div>
                     <div class="menuBtns">
-                        <button class="all">Deserts</button>
+                        <button class="all" data-target="#desserts">Deserts</button>
                         <div class="divider">|</div>
                     </div>
                 </div>
@@ -392,7 +392,7 @@
 
                 <!-- Fish -->
                 <div class="menuSections"> <!--exp ng-star-inserted -->
-                    <div id="appetizers"> <!--appetizers-->
+                    <div id="fishEntrees"> <!--appetizers-->
                         <div class="sectionText"> <!--cateogory-tab -->
                             <h3>Fish Entrees</h3>
                             <div class="png"> <!--png-->
@@ -472,7 +472,7 @@
 
                 <!-- Vegetables -->
                 <div class="menuSections"> <!--exp ng-star-inserted -->
-                    <div id="Vegetables"> <!--appetizers-->
+                    <div id="vegetables"> <!--appetizers-->
                         <div class="sectionText"> <!--cateogory-tab -->
                             <h3>Vegetables</h3>
                             <div class="png"> <!--png-->
@@ -1188,7 +1188,7 @@
                 
                 <!-- Desserts -->
                 <div class="menuSections"> <!--exp ng-star-inserted -->
-                    <div id="Desserts"> <!--appetizers-->
+                    <div id="desserts"> <!--appetizers-->
                         <div class="sectionText"> <!--cateogory-tab -->
                             <h3>Desserts</h3>
                             <div class="png"> <!--png-->
@@ -1276,7 +1276,8 @@
             <a href="https://robinmathew.dev" target="_blank">Powered by Robo Web Services</a>
           </div>
 
-
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="assets/js/app.js"></script>
 </body>
 </html>
