updated javascript to display only specific menus per button click, and updated data-target for dosa menu

--- a/menu.html
+++ b/menu.html
@@ -51,7 +51,7 @@
 
                 <div class="menuOptions">
                     <div class="menuBtns">
-                        <button class="all highlight" data-target="#appetizers">All</button>
+                        <button class="all highlight" data-target="#">All</button>
                         <div class="divider">|</div>
                     </div>
                     <div class="menuBtns">
@@ -107,7 +107,7 @@
                         <div class="divider">|</div>
                     </div>
                     <div class="menuBtns">
-                        <button class="all" data-target="dosa">Dosa Specials</button>
+                        <button class="all" data-target="#dosa">Dosa Specials</button>
                         <div class="divider">|</div>
                     </div>
                     <div class="menuBtns">
