removed .png from each menuSection

--- a/menu.html
+++ b/menu.html
@@ -122,9 +122,9 @@
                     <div id="appetizers"> <!--appetizers-->
                         <div class="sectionText"> <!--cateogory-tab -->
                             <h3>Appetizers</h3>
-                            <div class="png"> <!--png-->
+                            <!-- <div class="png"> 
                                 <img src="assets/imgs/chevron-double-down.svg" alt="">
-                            </div>
+                            </div> -->
                             <div class="openCloseBtn"> <!--tab-->
                                 <button class="openClose">-</button>
                             </div>
@@ -201,9 +201,9 @@
                     <div id="muttonEntrees"> <!--appetizers-->
                         <div class="sectionText"> <!--cateogory-tab -->
                             <h3>Mutton Entrees</h3>
-                            <div class="png"> <!--png-->
+                            <!-- <div class="png"> 
                                 <img src="assets/imgs/chevron-double-down.svg" alt="">
-                            </div>
+                            </div> -->
                             <div class="openCloseBtn"> <!--tab-->
                                 <button class="openClose">-</button>
                             </div>
@@ -262,9 +262,9 @@
                     <div id="chickenEntrees"> <!--appetizers-->
                         <div class="sectionText"> <!--cateogory-tab -->
                             <h3>Chicken Entrees</h3>
-                            <div class="png"> <!--png-->
+                            <!-- <div class="png"> 
                                 <img src="assets/imgs/chevron-double-down.svg" alt="">
-                            </div>
+                            </div> -->
                             <div class="openCloseBtn"> <!--tab-->
                                 <button class="openClose">-</button>
                             </div>
@@ -342,9 +342,9 @@
                     <div id="beefEntrees"> <!--appetizers-->
                         <div class="sectionText"> <!--cateogory-tab -->
                             <h3>Beef Entrees</h3>
-                            <div class="png"> <!--png-->
+                            <!-- <div class="png"> 
                                 <img src="assets/imgs/chevron-double-down.svg" alt="">
-                            </div>
+                            </div> -->
                             <div class="openCloseBtn"> <!--tab-->
                                 <button class="openClose">-</button>
                             </div>
@@ -395,9 +395,9 @@
                     <div id="fishEntrees"> <!--appetizers-->
                         <div class="sectionText"> <!--cateogory-tab -->
                             <h3>Fish Entrees</h3>
-                            <div class="png"> <!--png-->
+                            <!-- <div class="png"> 
                                 <img src="assets/imgs/chevron-double-down.svg" alt="">
-                            </div>
+                            </div> -->
                             <div class="openCloseBtn"> <!--tab-->
                                 <button class="openClose">-</button>
                             </div>
@@ -475,9 +475,9 @@
                     <div id="vegetables"> <!--appetizers-->
                         <div class="sectionText"> <!--cateogory-tab -->
                             <h3>Vegetables</h3>
-                            <div class="png"> <!--png-->
+                            <!-- <div class="png"> 
                                 <img src="assets/imgs/chevron-double-down.svg" alt="">
-                            </div>
+                            </div> -->
                             <div class="openCloseBtn"> <!--tab-->
                                 <button class="openClose">-</button>
                             </div>
@@ -600,9 +600,9 @@
                     <div id="indoChinese"> <!--appetizers-->
                         <div class="sectionText"> <!--cateogory-tab -->
                             <h3>Indo Chinese</h3>
-                            <div class="png"> <!--png-->
+                            <!-- <div class="png"> 
                                 <img src="assets/imgs/chevron-double-down.svg" alt="">
-                            </div>
+                            </div> -->
                             <div class="openCloseBtn"> <!--tab-->
                                 <button class="openClose">-</button>
                             </div>
@@ -680,9 +680,9 @@
                     <div id="combo"> <!--appetizers-->
                         <div class="sectionText"> <!--cateogory-tab -->
                             <h3>Combos</h3>
-                            <div class="png"> <!--png-->
+                            <!-- <div class="png"> 
                                 <img src="assets/imgs/chevron-double-down.svg" alt="">
-                            </div>
+                            </div> -->
                             <div class="openCloseBtn"> <!--tab-->
                                 <button class="openClose">-</button>
                             </div>
@@ -737,9 +737,9 @@
                     <div id="specialCombos"> <!--appetizers-->
                         <div class="sectionText"> <!--cateogory-tab -->
                             <h3>Special Combos</h3>
-                            <div class="png"> <!--png-->
+                            <!-- <div class="png"> 
                                 <img src="assets/imgs/chevron-double-down.svg" alt="">
-                            </div>
+                            </div> -->
                             <div class="openCloseBtn"> <!--tab-->
                                 <button class="openClose">-</button>
                             </div>
@@ -791,9 +791,9 @@
                     <div id="beverages"> <!--appetizers-->
                         <div class="sectionText"> <!--cateogory-tab -->
                             <h3>Beverages</h3>
-                            <div class="png"> <!--png-->
+                            <!-- <div class="png"> 
                                 <img src="assets/imgs/chevron-double-down.svg" alt="">
-                            </div>
+                            </div> -->
                             <div class="openCloseBtn"> <!--tab-->
                                 <button class="openClose">-</button>
                             </div>
@@ -835,9 +835,9 @@
                     <div id="breads"> <!--appetizers-->
                         <div class="sectionText"> <!--cateogory-tab -->
                             <h3>Indian Breads</h3>
-                            <div class="png"> <!--png-->
+                            <!-- <div class="png"> 
                                 <img src="assets/imgs/chevron-double-down.svg" alt="">
-                            </div>
+                            </div> -->
                             <div class="openCloseBtn"> <!--tab-->
                                 <button class="openClose">-</button>
                             </div>
@@ -915,9 +915,7 @@
                     <div id="riceAndNoodles"> <!--appetizers-->
                         <div class="sectionText"> <!--cateogory-tab -->
                             <h3>Rice And Noodles</h3>
-                            <div class="png"> <!--png-->
-                                <img src="assets/imgs/chevron-double-down.svg" alt="">
-                            </div>
+                            <!-- f -->
                             <div class="openCloseBtn"> <!--tab-->
                                 <button class="openClose">-</button>
                             </div>
@@ -1040,9 +1038,9 @@
                     <div id="biryani"> <!--appetizers-->
                         <div class="sectionText"> <!--cateogory-tab -->
                             <h3>Biryani</h3>
-                            <div class="png"> <!--png-->
+                            <!-- <div class="png"> 
                                 <img src="assets/imgs/chevron-double-down.svg" alt="">
-                            </div>
+                            </div> -->
                             <div class="openCloseBtn"> <!--tab-->
                                 <button class="openClose">-</button>
                             </div>
@@ -1120,9 +1118,9 @@
                     <div id="dosa"> <!--appetizers-->
                         <div class="sectionText"> <!--cateogory-tab -->
                             <h3>Dosa Specials</h3>
-                            <div class="png"> <!--png-->
+                            <!-- <div class="png"> png
                                 <img src="assets/imgs/chevron-double-down.svg" alt="">
-                            </div>
+                            </div> -->
                             <div class="openCloseBtn"> <!--tab-->
                                 <button class="openClose">-</button>
                             </div>
@@ -1191,9 +1189,9 @@
                     <div id="desserts"> <!--appetizers-->
                         <div class="sectionText"> <!--cateogory-tab -->
                             <h3>Desserts</h3>
-                            <div class="png"> <!--png-->
+                            <!-- <div class="png"> 
                                 <img src="assets/imgs/chevron-double-down.svg" alt="">
-                            </div>
+                            </div> -->
                             <div class="openCloseBtn"> <!--tab-->
                                 <button class="openClose">-</button>
                             </div>
