--- a/menu.html
+++ b/menu.html
@@ -129,68 +129,70 @@
                                 <button class="openClose">-</button>
                             </div>
                         </div>
-                        <div class="inner-container"> <!--Inner-container-->
-                            <div class="main-container">
-                                <div class="logo"> <!--logo-->
-                                    <img src="assets/imgs/chicken65.jpg" alt="">
+                        <div class="inner-wrapper">
+                            <div class="inner-container"> <!--Inner-container-->
+                                <div class="main-container">
+                                    <div class="logo"> <!--logo-->
+                                        <img src="assets/imgs/chicken65.jpg" alt="">
+                                    </div>
+                                    <div class="content">
+                                        <h3>Chicken 65</h3>
+                                        <p><span>$11.99</span></p>
+                                    </div>
                                 </div>
-                                <div class="content">
-                                    <h3>Chicken 65</h3>
-                                    <p><span>$11.99</span></p>
+                                <div class="main-container">
+                                    <div class="logo">
+                                        <img src="/assets/imgs/Kerala chicken fry.jpg" alt="">
+                                    </div>
+                                    <div class="content">
+                                        <h3>Kerala Chicken Fry</h3>
+                                        <p><span>$11.99</span></p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="main-container">
-                                <div class="logo">
-                                    <img src="/assets/imgs/Kerala chicken fry.jpg" alt="">
+                                <div class="main-container">
+                                    <div class="logo">
+                                        <img src="/assets/imgs/chilliChicken.jpeg" alt="">
+                                    </div>
+                                    <div class="content">
+                                        <h3>Chili Chicken Dry</h3>
+                                        <p><span>$11.99</span></p>
+                                    </div>
                                 </div>
-                                <div class="content">
-                                    <h3>Kerala Chicken Fry</h3>
-                                    <p><span>$11.99</span></p>
+                                <div class="main-container">
+                                    <div class="logo">
+                                        <img src="/assets/imgs/Gobi_Manchurian.jpg" alt="">
+                                    </div>
+                                    <div class="content">
+                                        <h3>Gobi Manchurian</h3>
+                                        <p><span>$10.99</span></p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="main-container">
-                                <div class="logo">
-                                    <img src="/assets/imgs/chilliChicken.jpeg" alt="">
+                                <div class="main-container">
+                                    <div class="logo">
+                                        <img src="/assets/imgs/chickenManchurian.jpg" alt="">
+                                    </div>
+                                    <div class="content">
+                                        <h3>Chicken Manchurian</h3>
+                                        <p><span>$10.99</span></p>
+                                    </div>
                                 </div>
-                                <div class="content">
-                                    <h3>Chili Chicken Dry</h3>
-                                    <p><span>$11.99</span></p>
+                                <div class="main-container">
+                                    <div class="logo">
+                                        <img src="/assets/imgs/chicken-pakora-8.jpg" alt="">
+                                    </div>
+                                    <div class="content">
+                                        <h3>Chicken Pakora</h3>
+                                        <p><span>$10.99</span></p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="main-container">
-                                <div class="logo">
-                                    <img src="/assets/imgs/Gobi_Manchurian.jpg" alt="">
-                                </div>
-                                <div class="content">
-                                    <h3>Gobi Manchurian</h3>
-                                    <p><span>$10.99</span></p>
-                                </div>
-                            </div>
-                            <div class="main-container">
-                                <div class="logo">
-                                    <img src="/assets/imgs/chickenManchurian.jpg" alt="">
-                                </div>
-                                <div class="content">
-                                    <h3>Chicken Manchurian</h3>
-                                    <p><span>$10.99</span></p>
-                                </div>
-                            </div>
-                            <div class="main-container">
-                                <div class="logo">
-                                    <img src="/assets/imgs/chicken-pakora-8.jpg" alt="">
-                                </div>
-                                <div class="content">
-                                    <h3>Chicken Pakora</h3>
-                                    <p><span>$10.99</span></p>
-                                </div>
-                            </div>
-                            <div class="main-container">
-                                <div class="logo">
-                                    <img src="assets/imgs/beefDryFry.jpg" alt="">
-                                </div>
-                                <div class="content">
-                                    <h3>Beef Dry Fry (BDF)</h3>
-                                    <p><span>$16.99</span></p>
+                                <div class="main-container">
+                                    <div class="logo">
+                                        <img src="assets/imgs/beefDryFry.jpg" alt="">
+                                    </div>
+                                    <div class="content">
+                                        <h3>Beef Dry Fry (BDF)</h3>
+                                        <p><span>$16.99</span></p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -208,6 +210,7 @@
                                 <button class="openClose">-</button>
                             </div>
                         </div>
+                        <div class="inner-wrapper">
                         <div class="inner-container"> <!--Inner-container-->
                             <div class="main-container">
                                 <div class="logo"> <!--logo-->
@@ -256,6 +259,7 @@
                             </div>
                         </div>
                     </div>
+                    </div>
                 </div>
                             
                 <div class="menuSections"> <!--exp ng-star-inserted -->
@@ -269,6 +273,7 @@
                                 <button class="openClose">-</button>
                             </div>
                         </div>
+                        <div class="inner-wrapper">
                         <div class="inner-container"> <!--Inner-container-->
                             <div class="main-container">
                                 <div class="logo"> <!--logo-->
@@ -335,6 +340,7 @@
                             </div>
                         </div>
                     </div>
+                    </div>
                 </div>
 
                 <!-- Beef -->
@@ -349,6 +355,7 @@
                                 <button class="openClose">-</button>
                             </div>
                         </div>
+                        <div class="inner-wrapper">
                         <div class="inner-container"> <!--Inner-container-->
                             <div class="main-container">
                                 <div class="logo"> <!--logo-->
@@ -388,6 +395,7 @@
                             </div>
                         </div>
                     </div>
+                    </div>
                 </div>
 
                 <!-- Fish -->
@@ -402,6 +410,7 @@
                                 <button class="openClose">-</button>
                             </div>
                         </div>
+                        <div class="inner-wrapper">
                         <div class="inner-container"> <!--Inner-container-->
                             <div class="main-container">
                                 <div class="logo"> <!--logo-->
@@ -468,6 +477,7 @@
                             </div>
                         </div>
                     </div>
+                    </div>
                 </div>
 
                 <!-- Vegetables -->
@@ -482,6 +492,7 @@
                                 <button class="openClose">-</button>
                             </div>
                         </div>
+                        <div class="inner-wrapper">
                         <div class="inner-container"> <!--Inner-container-->
                             <div class="main-container">
                                 <div class="logo"> <!--logo-->
@@ -593,6 +604,7 @@
                             </div>
                         </div>
                     </div>
+                    </div>
                 </div>
 
                 <!-- Indo Chinese -->
@@ -607,6 +619,7 @@
                                 <button class="openClose">-</button>
                             </div>
                         </div>
+                        <div class="inner-wrapper">
                         <div class="inner-container"> <!--Inner-container-->
                             <div class="main-container">
                                 <div class="logo"> <!--logo-->
@@ -673,6 +686,7 @@
                             </div>
                         </div>
                     </div>
+                    </div>
                 </div>
 
                 <!-- Combo -->
@@ -687,6 +701,7 @@
                                 <button class="openClose">-</button>
                             </div>
                         </div>
+                        <div class="inner-wrapper">
                         <div class="inner-container"> <!--Inner-container-->
                             <div class="main-container">
                                 <div class="logo"> <!--logo-->
@@ -730,6 +745,7 @@
                             </div>
                         </div>
                     </div>
+                    </div>
                 </div>
 
                 <!-- Special Combos -->
@@ -744,6 +760,7 @@
                                 <button class="openClose">-</button>
                             </div>
                         </div>
+                        <div class="inner-wrapper">
                         <div class="inner-container"> <!--Inner-container-->
                             <div class="main-container">
                                 <div class="logo"> <!--logo-->
@@ -784,6 +801,7 @@
                             </div>
                         </div>
                     </div>
+                    </div>
                 </div>
 
                 <!-- Beverages -->
@@ -798,6 +816,7 @@
                                 <button class="openClose">-</button>
                             </div>
                         </div>
+                        <div class="inner-wrapper">
                         <div class="inner-container"> <!--Inner-container-->
                             <div class="main-container">
                                 <div class="logo"> <!--logo-->
@@ -828,6 +847,7 @@
                             </div>
                         </div>
                     </div>
+                    </div>
                 </div>
 
                 <!-- Indian Breads -->
@@ -842,6 +862,7 @@
                                 <button class="openClose">-</button>
                             </div>
                         </div>
+                        <div class="inner-wrapper">
                         <div class="inner-container"> <!--Inner-container-->
                             <div class="main-container">
                                 <div class="logo"> <!--logo-->
@@ -908,6 +929,7 @@
                             </div>
                         </div>
                     </div>
+                    </div>
                 </div>
 
                 <!-- Rice & Noodles -->
@@ -920,6 +942,7 @@
                                 <button class="openClose">-</button>
                             </div>
                         </div>
+                        <div class="inner-wrapper">
                         <div class="inner-container"> <!--Inner-container-->
                             <div class="main-container">
                                 <div class="logo"> <!--logo-->
@@ -1031,6 +1054,7 @@
                             </div>
                         </div>
                     </div>
+                    </div>
                 </div>
 
                 <!-- Biryani -->
@@ -1045,6 +1069,7 @@
                                 <button class="openClose">-</button>
                             </div>
                         </div>
+                        <div class="inner-wrapper">
                         <div class="inner-container"> <!--Inner-container-->
                             <div class="main-container">
                                 <div class="logo"> <!--logo-->
@@ -1111,6 +1136,7 @@
                             </div>
                         </div>
                     </div>
+                    </div>
                 </div>
 
                 <!-- Dosa  -->
@@ -1125,6 +1151,7 @@
                                 <button class="openClose">-</button>
                             </div>
                         </div>
+                        <div class="inner-wrapper">
                         <div class="inner-container"> <!--Inner-container-->
                             <div class="main-container">
                                 <div class="logo"> <!--logo-->
@@ -1182,6 +1209,7 @@
                             </div>
                         </div>
                     </div>
+                    </div>
                 </div>
                 
                 <!-- Desserts -->
@@ -1196,6 +1224,7 @@
                                 <button class="openClose">-</button>
                             </div>
                         </div>
+                        <div class="inner-wrapper">
                         <div class="inner-container"> <!--Inner-container-->
                             <div class="main-container">
                                 <div class="logo"> <!--logo-->
@@ -1225,6 +1254,7 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
                     </div>
                 </div>
 
