--- a/menu.html
+++ b/menu.html
@@ -29,10 +29,10 @@
                 <a class="nav-link" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item listLinks">
-                <a class="nav-link active" href="#">Menu</a>
+                <a class="nav-link active" href="menu.html">Menu</a>
               </li>
               <li class="nav-item listLinks">
-                <a class="nav-link" href="#">Contact Us</a>
+                <a class="nav-link" href="contact.html">Contact Us</a>
               </li>
             </ul>
           </div>
