--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="assets/css/styles.css">
     </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary nav sticky-top">
+     <nav class="navbar navbar-expand-lg bg-body-tertiary nav sticky-top">
         <div class="container-fluid">
         <!-- Logo on the left -->
         <a class="navbar-brand" href="index.html">
@@ -37,19 +37,45 @@
             </ul>
           </div>
         </div>
-      </nav>
+      </nav> 
 
       <div id="form">
         <h3>Get in touch with us</h3>
         <form action="" class="contactForm">
-            <div class="container">
-                <input type="text">
+            <div class="containerForm">
+                <input class="firstName" type="text" name="firstName" placeholder="First Name*" required>
+                <input class="lastName" type="text" name="lastName" placeholder="Last Name *" required>
             </div>
+            <input class="businessName" type="text" name="businessName" placeholder="Business Name">
+            <input class="phone" type="tel" name="phone" placeholder="Phone Number*" required>
+            <input class="email" type="email" name="email" placeholder="Email*" required>
+            <button class="btn" type="submit">Submit</button>
         </form>
+      </div>
+
+      <div class="contact">
+        <h3>You can also reach out to us at</h3>
+        <div class="map">
+            <a href="https://maps.app.goo.gl/eZQq9JB1SC4KyP4p7" class="mapLink">
+                <img src="assets/imgs/" alt="">
+                <h4>Visit Us</h4>
+                <p>2548 Dickerson Pkwy #102, Carrollton, TX 75006</p>
+            </a>
+            <a href="tel:972-695-6162" class="phoneLink">
+                <img src="" alt="">
+                <h4>Call Us</h4>
+                <p>972-695-6162</p>
+            </a>
+            <a href="mailto:sgvarghese05@gmail.com" class="emailLink">
+                <img src="" alt="">
+                <h4>Email Us</h4>
+                <p>sgvarghese05@gmail.com</p>
+            </a>
+        </div>
       </div>
     
       <!-- Footer -->
-      <footer id="footer">
+     <footer id="footer">
         <div class="footerLogo">
           <img src="assets/imgs/a2b5fe31-f4cd-4590-8b94-4918a33076e2_logo.jpg" alt="">
           <div class="socials">
@@ -89,7 +115,7 @@
       <div class="closingLiner">
         <p>&copy 2025 Palm India Restaurant. All rights reserved.</p>
         <a href="https://robinmathew.dev" target="_blank">Powered by Robo Web Services</a>
-      </div>
+      </div> 
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
