added iFrame section

--- a/contact.html
+++ b/contact.html
@@ -79,6 +79,22 @@
             </a>
         </div>
       </div>
+
+      <section class="mapArea">
+        <h2>Visit Us</h2>
+        <p>Find us at our restaurant location.</p>
+        <div class="mapContainer">
+            <iframe 
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6693.645621379026!2d-96.9194318!3d32.982076299999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864c25ff386bcc19%3A0xc0527551f6e63b31!2s2548%20Dickerson%20Pkwy%2C%20Carrollton%2C%20TX%2075006!5e0!3m2!1sen!2sus!4v1741971450991!5m2!1sen!2sus" 
+                width="100%" 
+                height="450" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy" 
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+        </div>
+      </section>
     
       <!-- Footer -->
      <footer id="footer">
