adjusted gap on .contact a:first-child

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         </div>
         <div class="contact">
           <a href="https://www.google.com/maps/place/2548+Dickerson+Pkwy,+Carrollton,+TX+75006/@32.9820763,-96.9194318,17z/data=!3m1!4b1!4m6!3m5!1s0x864c25ff386bcc19:0xc0527551f6e63b31!8m2!3d32.9820763!4d-96.9194318!16s%2Fg%2F11b8v4mksn?entry=ttu&g_ep=EgoyMDI1MDMwMy4wIKXMDSoJLDEwMjExNDU1SAFQAw%3D%3D">
-            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40"  fill="currentColor" class="bi bi-geo-alt-fill " viewBox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40"  fill="currentColor" class="bi geo bi-geo-alt-fill " viewBox="0 0 16 16">
               <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10m0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6"/>
             </svg>2548 Dickerson Pkway #102, Carrollton, TX 75006
           </a>
