added coming soon tag for online ordering

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
                     <img src="assets/imgs/online-order.png" alt="">
                     <h3>Order Online</h3>
                     <p>Make online orders</p>
+                    <p>*Coming Soon*</p>
                 </div>
                 <div class="offering">
                     <img src="assets/imgs/receiver.png" alt="">
