updated #services section to include cards for .serviceOfferings

--- a/index.html
+++ b/index.html
@@ -105,22 +105,22 @@
             </div>
 
             <div class="serviceOfferings">
-                <div class="offering">
-                    <img src="assets/imgs/take-away.png" alt="">
-                    <h3>Shop Collection</h3>
-                    <p>Order online and collect from the shop</p>
-                </div>
-                <div class="offering">
-                    <img src="assets/imgs/online-order.png" alt="">
-                    <h3>Order Online</h3>
-                    <p>Make online orders</p>
-                    <p>*Coming Soon*</p>
-                </div>
-                <div class="offering">
-                    <img src="assets/imgs/receiver.png" alt="">
-                    <h3>Hotline</h3>
-                    <p>We are here to answer any queries during our operating hours</p>
-                </div>
+              <a href="/menu.html" class="offering card-link" aria-label="View our menu for shop Collection">
+                <img src="assets/imgs/take-away.png" alt="">
+                  <h3>Shop Collection</h3>
+                  <p>Order online and collect from the shop</p>
+              </a>
+              <a href="#" class="offering card-link is-disabled" aria-disabled="true" tabindex="-1">
+                <img src="assets/imgs/online-order.png" alt="">
+                  <h3>Order Online</h3>
+                  <p>Make online orders</p>
+                  <p>*Coming Soon*</p>
+              </a>
+              <a href="tel:972-695-6162" class="offering hotline-button span-two" aria-label="Call our hotline">
+                  <img src="assets/imgs/receiver.png" alt="">
+                  <h3>Hotline</h3>
+                  <p>We are here to answer any queries during our operating hours</p>
+                </a>
             </div>
       </section>
       
