added public fold and added meta tags for OG imgs

--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- OG -->
+    <meta property="og:title" content="Palm India Restaurant" />
+    <meta property="og:description" content="Authentic South Indian Cuisine in Carrollton, TX. Dine-in, takeout, or order online!" />
+    <meta property="og:image" content="https://restaurant-palm-india.vercel.app/public/images/OGImg3.jpg" />
+    <meta property="og:url" content="https://restaurant-palm-india.vercel.app/" />
+    <meta property="og:type" content="website" />
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Palm India Restaurant" />
+    <meta name="twitter:description" content="Authentic South Indian Cuisine in Carrollton, TX. Dine-in, takeaway, or order online!" />
+    <meta name="twitter:image" content="https://restaurant-palm-india.vercel.app/public/images/OGImg3.jpg" />
     <title>Palm India</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
